# agent-switch

./: .gitignore  .trellis-upgrade-audit.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.trellis/: .template-hashes.json  config.yaml  workflow.md
docs/: release.md
docs/user-manual/: README.md
src/: App.tsx  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_config.rs  app_state.rs  auto_launch.rs  claude_desktop_config.rs  codex_config.rs  codex_history_migration.rs  codex_state_db.rs  config.rs  hermes_config.rs  lib.rs  main.rs  openclaw_config.rs  opencode_config.rs  panic_hook.rs  provider.rs  settings.rs  store.rs  tray.rs
src-tauri/src/commands/: aggregate.rs  app.rs  config.rs  external_config.rs  failover.rs  import_export.rs  mcp.rs  misc.rs  mod.rs  model_cache.rs  profile.rs  provider.rs  proxy.rs  s3_sync.rs  settings.rs  skill.rs  subscription.rs  sync_support.rs  webdav_sync.rs
src-tauri/src/config/: mod.rs  paths.rs
src-tauri/src/database/: backup.rs  migration.rs  mod.rs  schema.rs  tests.rs
src-tauri/src/database/dao/: custom_aggregates.rs  mod.rs  profiles.rs  provider_models.rs  providers.rs  proxy.rs  settings.rs  skills.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/db/dao/: accounts.rs  app_metadata.rs  endpoint_models.rs  endpoints.rs  mcp_servers.rs  mod.rs  model_aliases.rs  model_locks.rs  prompts.rs  providers.rs  request_logs.rs  route_settings.rs  skills.rs  tool_takeover.rs
src-tauri/src/deeplink/: mcp.rs  mod.rs  parser.rs  prompt.rs  provider.rs  skill.rs  tests.rs
src-tauri/src/http/: error.rs  health.rs  mod.rs  placeholders.rs  router.rs
src-tauri/src/http/api/: accounts.rs  aliases.rs  auth.rs  common_config.rs  deeplink.rs  endpoints.rs  logs.rs  mcp.rs  mod.rs  models.rs  prompts.rs  providers.rs  routes.rs  sessions.rs  settings.rs  skills.rs  tests.rs  tools.rs  v1_models.rs
src-tauri/src/http/proxy/: auth_injector.rs  capability.rs  constants.rs  error.rs  failover.rs  integration_tests.rs  logger.rs  mod.rs  model_mapper.rs  oauth_refresh.rs  selector.rs  sse.rs  stream_guard.rs  translate.rs
src-tauri/src/proxy/: cache_injector.rs  cc_client_profile.rs  failover_switch.rs  forwarder.rs  handler_context.rs  handlers.rs  http_client.rs  hyper_client.rs  media_sanitizer.rs  mod.rs  model_mapper.rs  provider_router.rs  server.rs  snapshot.rs  snapshot_adapters.rs  thinking_optimizer.rs  types.rs
src-tauri/src/proxy/providers/: codex.rs  codex_responses_sse.rs  mod.rs  reasoning_bridge.rs  streaming_codex_anthropic.rs  streaming_codex_chat.rs  transform_codex_anthropic.rs  transform_codex_chat.rs  transform_responses.rs
src-tauri/src/proxy/usage/: logger.rs
src-tauri/src/services/: aggregate.rs  codex_oauth.rs  coding_plan.rs  crypto.rs  external_config_monitor.rs  external_route_detection.rs  keychain.rs  mcp.rs  mod.rs  model_alias.rs  model_cache.rs  model_sync.rs  profile.rs  proxy.rs  proxy_snapshot_adapters.rs  s3.rs  s3_sync.rs  skill.rs  sql_helpers.rs  subscription.rs  sync_protocol.rs  usage_stats.rs  webdav_sync.rs
src-tauri/src/services/deeplink/: mod.rs
src-tauri/src/services/importers/: ccs.rs  mod.rs
src-tauri/src/services/mcp/: claude.rs  mod.rs  validation.rs
src-tauri/src/services/portability/: apply.rs  collect.rs  crypto_box.rs  mod.rs  package.rs
src-tauri/src/services/prompts/: claude.rs  mod.rs
src-tauri/src/services/provider/: live.rs  mod.rs  usage.rs
src-tauri/src/services/sessions/: claude.rs  mod.rs
src-tauri/src/services/skills/: backup.rs  discovery.rs  download.rs  install.rs  mod.rs  update.rs
src-tauri/src/services/tool_takeover/: claude_code.rs  claude_snapshot.rs  codex.rs  json_merge.rs  mod.rs
src-tauri/src/services/translator/: anthropic_openai.rs  helpers.rs  mod.rs  native.rs  openai_responses.rs
src-tauri/src/session_manager/providers/: codex.rs
src-tauri/tests/: app_config_load.rs  app_type_parse.rs  deeplink_import.rs  hermes_roundtrip.rs  import_export_sync.rs  mcp_commands.rs  profile_roundtrip.rs  provider_commands.rs  provider_service.rs  proxy_commands.rs  skill_sync.rs  support.rs
src/components/: DatabaseUpgrade.tsx  SubscriptionQuotaFooter.tsx  UsageScriptModal.tsx
src/config/: claudeDesktopProviderPresets.ts  claudeProviderPresets.ts  codexProviderPresets.ts  (+4 more)
(+495 files in other folders)
