[package]
name = "agent-switch"
version = "0.1.0"
description = "Agent management and routing application"
authors = ["XM-Chen"]
edition = "2021"

[lib]
name = "agent_switch_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

# 凭据加密与 Keychain
aes-gcm = "0.10"
rand = "0.8"
keyring = "3"
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

# OAuth HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
urlencoding = "2"

# 工具接管 TOML 编辑
toml_edit = "0.22"

# 导入导出：脱敏包密码派生 + gzip 压缩
argon2 = "0.5"
flate2 = "1"

# 代理转发
futures = "0.3"
bytes = "1"
http = "1"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
